--- a/eating/pages/About.html
+++ b/eating/pages/About.html
@@ -124,7 +124,8 @@
                         <form>
                             <div class="form-group">
                                 <label for="recipient-name" class="col-form-label">邮箱:</label>
-                                <input type="text" class="form-control" id="recipient-name" placeholder="@email">
+                                <input type="text" class="form-control" id="recipient-name" placeholder="@email" required="required" >
+                                <div class="invalid-feedback">邮箱地址格式不正确！</div>
                             </div>
                             <div class="form-group">
                                 <label for="message-text" class="col-form-label">反馈信息:</label>
@@ -167,6 +168,7 @@
     }, function () {
         $('#scanImg').hide()
     })
+    
     //收到反馈
     var send = $('#alert')
     send.click(function () {
@@ -175,10 +177,11 @@
         const timer = setTimeout(() => {
             $('#exampleModal').modal('hide')
             $('.modal-body').html(`<div class="modal-body">
-                                      <form>
+                                      <form action="" novalidate id="form-demo">
                                         <div class="form-group">
                                           <label for="recipient-name" class="col-form-label">邮箱:</label>
                                           <input type="text" class="form-control" id="recipient-name" placeholder="@email">
+                              
                                         </div>
                                         <div class="form-group">
                                           <label for="message-text" class="col-form-label">反馈信息:</label>
