--- a/eating/pages/Home.html
+++ b/eating/pages/Home.html
@@ -42,19 +42,23 @@
                 <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                 <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
                 <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
             </ol>
 
             <!-- 轮播图片 -->
             <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="../dist/images/banner5-original.jpg" class="d-block w-100" alt="...">
+                        <img src="../dist/images/banner1-original.jpg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="../dist/images/banner4-original.jpg" class="d-block w-100" alt="...">
+                        <img src="../dist/images/banner2-original.jpg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
                         <img src="../dist/images/banner3-original.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../dist/images/banner4-original.jpg" class="d-block w-100" alt="...">
                     </div>
                 </div>
             </div>
